other-ivpol/verify-image-slsa/.chainsaw-test/exception-mixed-images.yaml
apiVersion: v1
kind: Pod
metadata:
  name: slsa-exception-pod
  namespace: default
spec:
  containers:
  - name: approved-image
    image: ghcr.io/kyverno/test-verify-image:unsigned
    imagePullPolicy: Always
  - name: unapproved-image
    image: ghcr.io/kyverno/test-verify-image:signed
    imagePullPolicy: Always
