other-ivpol/verify-image-slsa/.chainsaw-test/exception-sibling-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: slsa-unexcepted-sibling
  namespace: default
spec:
  containers:
  - name: test-container
    image: ghcr.io/kyverno/test-verify-image:unsigned
    imagePullPolicy: Always
