other-ivpol/verify-image-slsa/.chainsaw-test/exception-wrong-namespace-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: slsa-exception-pod
  namespace: verify-slsa-other-ns
spec:
  containers:
  - name: test-container
    image: ghcr.io/kyverno/test-verify-image:unsigned
    imagePullPolicy: Always
