other-ivpol/verify-image-slsa/.chainsaw-test/exception-wrong-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verify-slsa-other-ns
