other-ivpol/verify-image-slsa/.chainsaw-test/policy.yaml
apiVersion: policies.kyverno.io/v1
kind: ImageValidatingPolicy
metadata:
  name: verify-slsa-provenance-keyless
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
