other-ivpol/verify-image-slsa/.chainsaw-test/transport-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: slsa-transport-failure-pod
spec:
  containers:
  - name: test-container
    image: myreg.org/path/repo:v1
    imagePullPolicy: Always
